<resources>
    <string name="app_name">Memorizing Capitals</string>
    <string name="capitals_europe">European Capitals</string>
    <string name="capitals_asia">Asian Capitals</string>
    <string name="capitals_namerica">Capitals of North America</string>
    <string name="capitals_samerica">Capitals of South America</string>
    <string name="capitals_australia">Capitals of Australia and Oceania</string>
    <string name="capitals_africa">African Capitals</string>
    <string name="amsterdam">Amsterdam</string>
    <string name="andorra_capital">Andorra la Vella</string>
    <string name="athens">Athens</string>
    <string name="belgrade">Belgrade</string>
    <string name="berlin">Berlin</string>
    <string name="bern">Bern</string>
    <string name="bratislava">Bratislava</string>
    <string name="brussels">Brussels</string>
    <string name="bucharest">Bucharest</string>
    <string name="budapest">Budapest</string>
    <string name="chisinau">Chisinau</string>
    <string name="copenhagen">Copenhagen</string>
    <string name="dublin">Dublin</string>
    <string name="helsinki">Helsinki</string>
    <string name="kyiv">Kyiv</string>
    <string name="lisbon">Lisbon</string>
    <string name="ljubljana">Ljubljana</string>
    <string name="london">London</string>
    <string name="luxembourg_capital">Luxembourg</string>
    <string name="madrid">Madrid</string>
    <string name="minsk">Minsk</string>
    <string name="monaco_capital">Monaco</string>
    <string name="moscow">Moscow</string>
    <string name="nicosia">Nicosia</string>
    <string name="oslo">Oslo</string>
    <string name="paris">Paris</string>
    <string name="podgorica">Podgorica</string>
    <string name="prague">Prague</string>
    <string name="reykjavik">Reykjavik</string>
    <string name="riga">Riga</string>
    <string name="rome">Rome</string>
    <string name="san_marino_capital">San Marino</string>
    <string name="sarajevo">Sarajevo</string>
    <string name="skopje">Skopje</string>
    <string name="sofia">Sofia</string>
    <string name="stockholm">Stockholm</string>
    <string name="tallinn">Tallinn</string>
    <string name="tirana">Tirana</string>
    <string name="vaduz">Vaduz</string>
    <string name="valletta">Valletta</string>
    <string name="vatican_capital">Vatican</string>
    <string name="vienna">Vienna</string>
    <string name="vilnius">Vilnius</string>
    <string name="warsaw">Warsaw</string>
    <string name="zagreb">Zagreb</string>
    <string-array name="europe_capitals">
        <item>@string/amsterdam</item>
        <item>@string/andorra_capital</item>
        <item>@string/athens</item>
        <item>@string/belgrade</item>
        <item>@string/berlin</item>
        <item>@string/bern</item>
        <item>@string/bratislava</item>
        <item>@string/brussels</item>
        <item>@string/bucharest</item>
        <item>@string/budapest</item>
        <item>@string/chisinau</item>
        <item>@string/copenhagen</item>
        <item>@string/dublin</item>
        <item>@string/helsinki</item>
        <item>@string/kyiv</item>
        <item>@string/lisbon</item>
        <item>@string/ljubljana</item>
        <item>@string/london</item>
        <item>@string/luxembourg_capital</item>
        <item>@string/madrid</item>
        <item>@string/minsk</item>
        <item>@string/monaco_capital</item>
        <item>@string/moscow</item>
        <item>@string/nicosia</item>
        <item>@string/oslo</item>
        <item>@string/paris</item>
        <item>@string/podgorica</item>
        <item>@string/prague</item>
        <item>@string/reykjavik</item>
        <item>@string/riga</item>
        <item>@string/rome</item>
        <item>@string/san_marino_capital</item>
        <item>@string/sarajevo</item>
        <item>@string/skopje</item>
        <item>@string/sofia</item>
        <item>@string/stockholm</item>
        <item>@string/tallinn</item>
        <item>@string/tirana</item>
        <item>@string/vaduz</item>
        <item>@string/valletta</item>
        <item>@string/vatican_capital</item>
        <item>@string/vienna</item>
        <item>@string/vilnius</item>
        <item>@string/warsaw</item>
        <item>@string/zagreb</item>
    </string-array>
    <string name="netherlands">Netherlands</string>
    <string name="andorra_country">Andorra</string>
    <string name="greece">Greece</string>
    <string name="serbia">Serbia</string>
    <string name="germany">Germany</string>
    <string name="switzerland">Switzerland</string>
    <string name="slovakia">Slovakia</string>
    <string name="belgium">Belgium</string>
    <string name="romania">Romania</string>
    <string name="hungary">Hungary</string>
    <string name="moldova">Moldova</string>
    <string name="denmark">Denmark</string>
    <string name="ireland">Ireland</string>
    <string name="finland">Finland</string>
    <string name="ukraine">Ukraine</string>
    <string name="portugal">Portugal</string>
    <string name="slovenia">Slovenia</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="luxembourg">Luxembourg</string>
    <string name="spain">Spain</string>
    <string name="belarus">Belarus</string>
    <string name="monaco">Monaco</string>
    <string name="russia">Russia</string>
    <string name="cyprus">Cyprus</string>
    <string name="norway">Norway</string>
    <string name="france">France</string>
    <string name="montenegro">Montenegro</string>
    <string name="czech_republic">Czech Republic</string>
    <string name="iceland">Iceland</string>
    <string name="latvia">Latvia</string>
    <string name="italy">Italy</string>
    <string name="san_marino_country">San Marino</string>
    <string name="bosnia_herzegovina">Bosnia &amp; Herzegovina</string>
    <string name="macedonia">Macedonia</string>
    <string name="bulgaria">Bulgaria</string>
    <string name="sweden">Sweden</string>
    <string name="estonia">Estonia</string>
    <string name="albania">Albania</string>
    <string name="liechtenstein">Liechtenstein</string>
    <string name="malta">Malta</string>
    <string name="vatican_country">Vatican</string>
    <string name="austria">Austria</string>
    <string name="lithuania">Lithuania</string>
    <string name="poland">Poland</string>
    <string name="croatia">Croatia</string>
    <string-array name="europe_countries">
        <item>@string/netherlands</item>
        <item>@string/andorra_country</item>
        <item>@string/greece</item>
        <item>@string/serbia</item>
        <item>@string/germany</item>
        <item>@string/switzerland</item>
        <item>@string/slovakia</item>
        <item>@string/belgium</item>
        <item>@string/romania</item>
        <item>@string/hungary</item>
        <item>@string/moldova</item>
        <item>@string/denmark</item>
        <item>@string/ireland</item>
        <item>@string/finland</item>
        <item>@string/ukraine</item>
        <item>@string/portugal</item>
        <item>@string/slovenia</item>
        <item>@string/united_kingdom</item>
        <item>@string/luxembourg</item>
        <item>@string/spain</item>
        <item>@string/belarus</item>
        <item>@string/monaco</item>
        <item>@string/russia</item>
        <item>@string/cyprus</item>
        <item>@string/norway</item>
        <item>@string/france</item>
        <item>@string/montenegro</item>
        <item>@string/czech_republic</item>
        <item>@string/iceland</item>
        <item>@string/latvia</item>
        <item>@string/italy</item>
        <item>@string/san_marino_country</item>
        <item>@string/bosnia_herzegovina</item>
        <item>@string/macedonia</item>
        <item>@string/bulgaria</item>
        <item>@string/sweden</item>
        <item>@string/estonia</item>
        <item>@string/albania</item>
        <item>@string/liechtenstein</item>
        <item>@string/malta</item>
        <item>@string/vatican_country</item>
        <item>@string/austria</item>
        <item>@string/lithuania</item>
        <item>@string/poland</item>
        <item>@string/croatia</item>
    </string-array>
    <string name="abu_dhabi">Abu Dhabi</string>
    <string name="amman">Amman</string>
    <string name="ankara">Ankara</string>
    <string name="ashgabat">Ashgabat</string>
    <string name="astana">Astana</string>
    <string name="baghdad">Baghdad</string>
    <string name="baku">Baku</string>
    <string name="bandar_seri_begawan">Bandar Seri Begawan</string>
    <string name="bangkok">Bangkok</string>
    <string name="beijing">Beijing</string>
    <string name="beirut">Beirut</string>
    <string name="bishkek">Bishkek</string>
    <string name="kotte">Sri Jayawardenepura Kotte</string>
    <string name="damascus">Damascus</string>
    <string name="dhaka">Dhaka</string>
    <string name="dili">Dili</string>
    <string name="doha">Doha</string>
    <string name="dushanbe">Dushanbe</string>
    <string name="hanoi">Hanoi</string>
    <string name="islamabad">Islamabad</string>
    <string name="jakarta">Jakarta</string>
    <string name="jerusalem">Jerusalem</string>
    <string name="kabul">Kabul</string>
    <string name="kathmandu">Kathmandu</string>
    <string name="kuala_lumpur">Kuala Lumpur</string>
    <string name="al_kuwayt">Al Kuwayt</string>
    <string name="lhasa">Lhasa</string>
    <string name="male">Male</string>
    <string name="manama">Manama</string>
    <string name="manila">Manila</string>
    <string name="muscat">Muscat</string>
    <string name="naypyidaw">Naypyidaw</string>
    <string name="new_delhi">New Delhi</string>
    <string name="phnom_penh">Phnom Penh</string>
    <string name="pyongyang">Pyongyang</string>
    <string name="ar_riyad">Ar Riyad</string>
    <string name="sanaa">Sanaa</string>
    <string name="seoul">Seoul</string>
    <string name="singapore_capital">Singapore</string>
    <string name="taipei">Taipei</string>
    <string name="tashkent">Tashkent</string>
    <string name="tbilisi">Tbilisi</string>
    <string name="tehran">Tehran</string>
    <string name="thimphu">Thimphu</string>
    <string name="tokyo">Tokyo</string>
    <string name="ulaanbaatar">Ulaanbaatar</string>
    <string name="vientiane">Vientiane</string>
    <string name="yerevan">Yerevan</string>
</resources>